--- a/WMS/Views/Theme/Modern/TenantLocations/Details.cshtml
+++ b/WMS/Views/Theme/Modern/TenantLocations/Details.cshtml
@@ -107,6 +107,10 @@
         </dt>
 
         <dd>
+            @Html.DisplayFor(model => model.IsMobile)
+        </dd>
+
+        <dd>
             @Html.DisplayFor(model => model.IsActive)
         </dd>
 
@@ -139,6 +143,16 @@
 
         <dd>
             @Html.DisplayFor(model => model.AllowStocktakeEdit)
+        </dd>
+
+
+        <dd>
+            @Html.DisplayFor(model => model.SendOrderStatusByEmail)
+        </dd>
+
+
+        <dd>
+            @Html.DisplayFor(model => model.SendOrderStatusBySms)
         </dd>
 
     </dl>
