--- a/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
@@ -21,7 +21,7 @@
         <div class="col-md-12 order-shipmentinfo-panes" id="divCustomShipmentAddress">
             <h2><span>Shipment Address</span></h2>
             <div class="col-md-6 float-left address-detail">
-                @Html.Label("Address Line 1", htmlAttributes: new { @class = "col-md-4 required-asterisk"})
+                @Html.Label("Address Line 1", htmlAttributes: new { @class = "col-md-4 required-asterisk" })
                 <div class="col-md-8">
                     @Html.TextBoxFor(m => m.ShipmentAddressLine1, new { @class = "form-control", @required = "required" })
                     @Html.ValidationMessageFor(model => model.ShipmentAddressLine1)
@@ -37,6 +37,12 @@
                 @Html.Label("Address Line 3", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("PostCode", htmlAttributes: new { @class = "col-md-4 required-asterisk" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.ShipmentAddressPostcode, new { @class = "form-control", @required = "required" })
                 </div>
             </div>
             <div class="col-md-6 float-left address-detail">
