--- a/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
@@ -225,7 +225,12 @@
                     </div>
                 </div>
             </div>
-
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Default Price Group", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.DropDownList("DefaultPriceGroupId", ViewBag.PriceGroups as IEnumerable<SelectListItem>, "Select Price Group", new { @class = "chosen-select" })
+                </div>
+            </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
