Minor bug fixes and changes

--- a/WMS/Views/Theme/Default/Shared/_AccountAddress.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AccountAddress.cshtml
@@ -10,7 +10,7 @@
     @Html.HiddenFor(m => m.AccountID)
     <div class="col-md-12 pull-left">
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class ="col-md-4">Name<span style="color:red"> *</span></label>
+            <label class ="col-md-4">Name</label>
             <div class="col-md-8">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
