--- a/WMS/Views/Theme/Default/AdminUtilities/AdminUtilities.cshtml
+++ b/WMS/Views/Theme/Default/AdminUtilities/AdminUtilities.cshtml
@@ -6,3 +6,11 @@
 <h2><span>@ViewBag.Message</span></h2>
 
 <h3>@ViewBag.Detail</h3>
+
+@if (ViewBag.Data != null)
+{
+    foreach (var item in ViewBag.Data)
+    {
+        <h3>@item</h3>
+    }
+}
